[gd_scene load_steps=2 format=3 uid="uid://bmwjudhyg4v4"]

[ext_resource type="Script" uid="uid://mr2n686jkdly" path="res://modals/resize_map_window.gd" id="1_lwil0"]

[node name="ResizeMapWindow" type="Window"]
auto_translate_mode = 1
title = "Resize the map"
initial_position = 1
size = Vector2i(550, 300)
transient = true
exclusive = true
script = ExtResource("1_lwil0")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Enter number of sectors for horizontal and vertical space:"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 18

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer2/GridContainer"]
layout_mode = 2
text = "Horizontal sectors:"
horizontal_alignment = 2

[node name="HorizontalSpinBox" type="SpinBox" parent="PanelContainer/VBoxContainer/MarginContainer2/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 9999.0
value = 1.0

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer2/GridContainer"]
layout_mode = 2
text = "Vertical sectors:"
horizontal_alignment = 2

[node name="VerticalSpinBox" type="SpinBox" parent="PanelContainer/VBoxContainer/MarginContainer2/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 9999.0
value = 1.0

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.760784, 0.760784, 0.760784, 1)
theme_override_font_sizes/font_size = 14
text = "Note: The map borders will automatically be added to these values"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.814241, 0.584624, 0.228865, 1)
theme_override_font_sizes/font_size = 14
text = "Warning: When resizing the map, keep in mind that all units (host stations, squads) and buildings (special and items) are going to be removed from the level if their positions exceed the bounds of the newly specified sector sizes."
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="OKButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Resize"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="close"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="close"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
